# imigo-linebot

./: .dockerignore  .env.example  .gitignore  API.md  DDNS_SETUP.md  DEBUG_DATABASE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.llm  FEATURES.md  README.md  config.py  database.db  dependencies.py  docker-compose.yaml  exceptions.py  force_link_menu.py  main.py  podman-compose.yaml  pyproject.toml  requirements.txt  test.py  update_rich_menus.py  verify_db.py  view_rich_menus.py
api/routes/: chat.py  rich_menu.py  system.py  translation.py
config/: chinese.yaml  config.yml  config.yml.example  english.yaml  id.yaml  indonesia.env  indonesia.yaml  philippines.env  philippines.yaml  thailand.yaml  vietnam.yaml
config/db/: db.sqlite
config/traefik/: dynamic_config.yml  traefik_config.yml
data/: .gitkeep
database/: database.py  models.py
ddns/: config.json.duckdns  config.json.dynu  config.json.noip
rich_menu/: QUICKSTART.md  README.md  RICH_MENU_SCRIPTS_README.md  RICH_MENU_UPDATE_GUIDE.md  draw.py  generate_image.py  menu_config.json  setup_rich_menu.py
scripts/: README.md  start_dev.bat  start_dev.sh  update_line_webhook.py
services/: ai_service.py  container.py  flex_messages.py  group_handler.py  intent_service.py  language_detection.py  location_service.py  maps_service.py  postback_handler.py  rich_menu_service.py  translation_service.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_language_detection.py.skip  test_rich_menu_service.py
traefik/: dynamic.yml  traefik.yml
