[project]
name = "imigo-linebot"
version = "0.1.0"
description = "Indonesian Migrant Worker Assistant LINE Bot"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "python-dotenv>=1.1.1",
    # LINE Bot SDK
    "line-bot-sdk>=3.19.0",
    # Database
    "aiosqlite>=0.21.0",
    "sqlalchemy>=2.0.43",
    "greenlet>=3.2.4",
    # LLM Client (OpenAI-compatible API for vLLM)
    "openai>=2.3.0",
    # Utilities
    "pyyaml>=6.0.3",
    "attrs>=23.0.0",
    # Language Detection
    "langdetect>=1.0.9",
    "pillow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.1",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
